--- a/src/main/webapp/WEB-INF/pages/pptshow.html
+++ b/src/main/webapp/WEB-INF/pages/pptshow.html
@@ -10,13 +10,11 @@
 <div class="flowtime">
     <div class="ft-section section-1" data-id="section-1">
         <div id="/section-1/page-1" class="ft-page page-1" data-id="page-1">
-            <p class="text1"><span id="text-75" contenteditable="true">爱是一种力量</span>, 让我们超越时空的维度感知它的存在!<br><span
-                    id="text-76"
-                    contenteditable="true" style="margin-left: 1100px">------星际穿越</span></p>
+            <p class="text1"><span id="text-75" contenteditable="true">爱是一种力量</span>, 让我们超越时空的维度感知它的存在!</p>
             <p class="text2">按键盘 "↓" <span id="text-78" contenteditable="true">开启故事线</span></p>
         </div>
         <div id="/section-1/page-2" class="ft-page page-2" data-id="page-2">
-            <p class="top-text" id="text-1" contenteditable="true">过去的我一直是一个人生活，享受着孤独，也憧憬着爱情。</p>
+            <p class="top-text" id="text-1" contenteditable="true">过去的他一直是一个人生活，享受着孤独，也憧憬着爱情。</p>
             <img src="image/ppt/1.png" tppabs="/image/ppt/1.png" alt="过去的我一直是一个人生活，享受着孤独，也憧憬着爱情。"/>
         </div>
         <div id="/section-1/page-3" class="ft-page page-3 left-img" data-id="page-3">
@@ -34,11 +32,11 @@
             <img src="image/ppt/4.png" tppabs="image/ppt/4.png" alt="一个人去健身房"/>
         </div>
         <div id="/section-2/page-2" class="ft-page page-6" data-id="page-2">
-            <h2 class="center-text" id="text-5" contenteditable="true">一个人购物，无人与我拼单</h2>
+            <h2 class="center-text" id="text-5" contenteditable="true">一个人购物，无人与他拼单</h2>
             <img src="image/ppt/iali29.jpg" tppabs="image/ppt/iali29.jpg" alt="一个人购物，无人与我拼单"/>
         </div>
         <div id="/section-2/page-3" class="ft-page page-7" data-id="page-3">
-            <h3 id="text-6" contenteditable="true">但我依然乐观，自信，等待着属于我的幸福</h3>
+            <h3 id="text-6" contenteditable="true">但飞鸿依然乐观，自信，等待着属于他的幸福</h3>
             <img src="image/ppt/iali60.jpg" tppabs="image/ppt/iali60.jpg" alt="但我依然乐观，自信，等待着属于我的幸福"/>
         </div>
         <div id="/section-2/page-4" class="ft-page page-8 full-img" data-id="page-4">
@@ -57,30 +55,30 @@
     <div class="ft-section section-3" data-id="section-3">
         <div id="/section-3/page-1" class="ft-page page-11" data-id="page-1">
             <h3 id="text-10" contenteditable="true">正式成为社会人</h3>
-            <img src="/image/ppt/10.png" tppabs="image/ppt/10.png" width="600px" height="1000px"/>
+            <img src="/image/ppt/10.png" tppabs="image/ppt/10.png" width="20%" height="60%"/>
         </div>
         <div id="/section-3/page-2" class="ft-page page-12" data-id="page-2">
             <h3><span id="text-11" contenteditable="true">虽遇到的挑战前所未有</span><br/><span id="text-12"
-                                                                                      contenteditable="true">但依然能够挺过去</span>
+                                                                                      contenteditable="true">但他依然能够挺过去</span>
             </h3>
-            <img src="image/ppt/11.png" tppabs="image/ppt/11.png" width="1000px" height="500px"/>
+            <img src="image/ppt/11.png" tppabs="image/ppt/11.png" width="40%" height="20%"/>
         </div>
         <div id="/section-3/page-3" class="ft-page page-13" data-id="page-3">
-            <img src="image/ppt/12.png" tppabs="image/ppt/12.png" alt='可是小明的爱情又在哪里呢？'/>
-            <h3 id="text-13" contenteditable="true">可是，我总是感觉缺点什么？哦~是爱情！</h3>
+            <img src="image/ppt/12.png" tppabs="image/ppt/12.png" alt='可是，我总是感觉缺点什么？哦~是爱情！'/>
+            <h3 id="text-13" contenteditable="true">可是，他总是感觉缺点什么？不是纸巾，是爱情！</h3>
         </div>
         <div id="/section-3/page-4" class="ft-page page-14 left-img" data-id="page-4">
-            <h3 id="text-14" contenteditable="true">爱情在镜子里面吗？但我只看到了自己，对象难道在量子领域？？？</h3>
+            <h3 id="text-14" contenteditable="true">爱情在镜子里面吗？但飞鸿只看到了自己。</h3>
             <img src="image/ppt/13.png" tppabs="image/ppt/13.png"/>
         </div>
         <div id="/section-3/page-5" class="ft-page page-15 left-img" data-id="page-5">
-            <h3><span id="text-15" contenteditable="true">关键时刻有幸受到了小勇的眷顾，他为我抛出了橄榄枝。</span><br/><span id="text-16"
-                                                                                                     contenteditable="true">他告诉我，幸福就在微信名片里~</span>
+            <h3><span id="text-15" contenteditable="true">关键时刻有幸得到了小勇的眷顾，及时为他抛出了橄榄枝。</span><br/><span id="text-16"
+                                                                                                      contenteditable="true">小勇告诉他，幸福就在微信名片里~</span>
             </h3>
             <img src="image/ppt/14.png" tppabs="image/ppt/14.png"/>
         </div>
         <div id="/section-3/page-6" class="ft-page page-16 left-img" data-id="page-6">
-            <h3><span id="text-17" contenteditable="true">于是，我发起了好友请求。。</span><br/><span id="text-18"
+            <h3><span id="text-17" contenteditable="true">于是，他发起了好友请求。。</span><br/><span id="text-18"
                                                                                          contenteditable="true">很幸运，没有被讨厌。</span>
             </h3>
             <img src="image/ppt/15.png" tppabs="image/ppt/15.png"/>
@@ -92,18 +90,18 @@
     </div>
     <div class="ft-section section-4" data-id="section-4">
         <div id="/section-4/page-1" class="ft-page page-18 full-img" data-id="page-1">
-            <p class="text" id="text-20" contenteditable="true">6月10日，我们相遇了~第一眼就爱上她了，她目测应该或许可能也对我有好感呢~</p>
-            <img class="center-img" src="image/ppt/17.png" tppabs="image/ppt/17.png" style="width: 600px;height: 800px;padding-top: 200px"/>
+            <p class="text" id="text-20" contenteditable="true">6月10日，他们相遇了~飞鸿第一眼就爱上她了，她目测应该或许可能也对飞鸿有好感呢~</p>
+            <img class="center-img" src="image/ppt/17.png" tppabs="image/ppt/17.png" style="width: 20%;height: 60%;padding-top: 200px"/>
         </div>
         <div id="/section-4/page-2" class="ft-page page-19" data-id="page-2">
-            <h3 id="text-21" contenteditable="true">可是，我母胎solo二十余载，根本不懂如何给她一个正式的表白仪式。</h3>
-            <img src="image/ppt/18.png" tppabs="image/ppt/18.png" width="40%" height="80%"/>
+            <h3 id="text-21" contenteditable="true">可是，他母胎solo二十余载，根本不懂如何给她一个正式的表白。</h3>
+            <img src="image/ppt/18.png" tppabs="image/ppt/18.png" width="35%" height="80%"/>
         </div>
         <div id="/section-4/page-3" class="ft-page left-img page-20" data-id="page-3">
-            <h3><span id="text-22" contenteditable="true">一度把我的兄弟一起拉来分享对策。</span><br>
-                <span id="text-22" contenteditable="true">但他也是单身。。。所以表白就先欠着了</span>
+            <h3><span id="text-22" contenteditable="true">一度把兄弟一起拉来分享对策。</span><br>
+                <span id="text-22" contenteditable="true">但兄弟也是单身。。。所以表白就先欠着了</span>
             </h3>
-            <img src="/image/ppt/19.png" tppabs="image/ppt/19.png" style="width: 600px;height: 800px">
+            <img src="/image/ppt/19.png" tppabs="image/ppt/19.png" style="width: 20%;height: 50%">
         </div>
         <div id="/section-4/page-4" class="ft-page page-21" data-id="page-4">
             <h3 id="text-23" contenteditable="true">之后，他和天奇在湖畔旁比过心</h3>
@@ -117,9 +115,9 @@
             <h3 id="text-25" contenteditable="true">也在卡片上留下了见证笔记</h3>
             <img src="image/ppt/22.png" tppabs="image/ppt/22.png"/>
         </div>
-        <div id="/section-4/page-7" class="ft-page page-24 " data-id="page-7">
+        <div id="/section-4/page-7" class="ft-page page-24" data-id="page-7">
             <h3 id="text-26" contenteditable="true">休息之余，天奇也不忘给他展示自己的厨艺</h3>
-            <img src="image/ppt/23.png" tppabs="image/ppt/23.png"/>
+            <img src="image/ppt/23.png" width="60%" height="80%" tppabs="image/ppt/23.png"/>
         </div>
     </div>
     <div class="ft-section section-5" data-id="section-5">
@@ -129,20 +127,20 @@
             <img src="image/ppt/24.png" tppabs="image/ppt/24.png"/>
         </div>
         <div id="/section-5/page-2" class="ft-page page-26 top-text" data-id="page-2">
-            <h3 id="text-29" contenteditable="true">在梦里，依然觉得她就在我身边。</h3>
-            <img src="image/ppt/25.png" tppabs="image/ppt/25.png" width="500px" height="800px"/>
+            <h3 id="text-29" contenteditable="true">在梦里，依然觉得她就在身边。</h3>
+            <img src="image/ppt/25.png" tppabs="image/ppt/25.png" width="25%" height="80%"/>
         </div>
         <div id="/section-5/page-3" class="ft-page page-27" data-id="page-3">
-            <h3 id="text-30" contenteditable="true">自此之后，我就成了名副其实的“背包客”</h3>
-            <img src="image/ppt/26.png" tppabs="image/ppt/26.png" width="600px" height="900px"/>
+            <h3 id="text-30" contenteditable="true">自此之后，他就成了名副其实的“背包客”</h3>
+            <img src="image/ppt/26.png" tppabs="image/ppt/26.png" width="25%" height="80%"/>
         </div>
         <div id="/section-5/page-4" class="ft-page page-28" data-id="page-4">
             <h3 id="text-31" contenteditable="true">与她一起逛商场</h3>
-            <img src="image/ppt/27.png" tppabs="image/ppt/27.png" width="700px" height="1000px"/>
+            <img src="image/ppt/27.png" tppabs="image/ppt/27.png" width="25%" height="60%"/>
         </div>
         <div id="/section-5/page-5" class="ft-page page-29" data-id="page-5">
             <h3 id="text-32" contenteditable="true">与她一起变成吃货</h3>
-            <img src="image/ppt/28.png" tppabs="image/ppt/28.png" width="800px" height="1000px"/>
+            <img src="image/ppt/28.png" tppabs="image/ppt/28.png" width="25%" height="60%"/>
         </div>
         <div id="/section-5/page-6" class="ft-page page-30" data-id="page-6">
             <h3 id="text-33" contenteditable="true">游玩上海，她比迪士尼的所有公主都漂亮。</h3>
@@ -156,11 +154,11 @@
     <div class="ft-section section-6" data-id="section-6">
         <div id="/section-6/page-1" class="ft-page page-32" data-id="page-1">
             <h3 id="text-35" contenteditable="true">辗转到了四川成都，迎来了辣椒的洗礼</h3>
-            <img src="image/ppt/31.png" tppabs="image/ppt/31.png" width="720px" height="1000px"/>
+            <img src="image/ppt/31.png" tppabs="image/ppt/31.png" width="20%" height="60%"/>
         </div>
         <div id="/section-6/page-2" class="ft-page page-33 top-text" data-id="page-2">
             <h3 id="text-36" contenteditable="true">先来一份串串开胃</h3>
-            <img src="image/ppt/32.png" tppabs="image/ppt/32.png" width="720px" height="1000px"/>
+            <img src="image/ppt/32.png" tppabs="image/ppt/32.png" width="30%" height="80%"/>
         </div>
         <div id="/section-6/page-3" class="ft-page page-34 left-img" data-id="page-3">
             <h3 id="text-37" contenteditable="true">尝试挑战成都的火锅，结果被结结实实的上了一课</h3>
@@ -173,8 +171,8 @@
             <img src="image/ppt/iali8.gif" tppabs="image/ppt/iali8.gif"/>
         </div>
         <div id="/section-6/page-5" class="ft-page page-36" data-id="page-5">
-            <h3 id="text-41" contenteditable="true">望月楼，在这里拍摄婚纱是当地风俗吗？</h3>
-            <img src="image/ppt/35.png" width="720px" height="1000px" tppabs="image/ppt/35.png"/>
+            <h3 id="text-41" contenteditable="true">初登望月楼，在这里拍摄婚纱是当地风俗吗？</h3>
+            <img src="image/ppt/35.png" width="25%" height="80%" tppabs="image/ppt/35.png"/>
         </div>
         <div id="/section-6/page-6" class="ft-page page-37 left-img" data-id="page-6">
             <h3 id="text-42" contenteditable="true">金沙遗址，梦开始的地方</h3>
@@ -187,26 +185,26 @@
     </div>
     <div class="ft-section section-7" data-id="section-7">
         <div id="/section-7/page-1" class="ft-page page-39 left-img" data-id="page-1">
-            <h3 id="text-44" contenteditable="true">这个小人儿还挺俊的，真想在上面打个眼儿给她当挂坠</h3>
+            <h3 id="text-44" contenteditable="true">飞鸿觉得这个小人儿还挺俊的，想在上面打个眼儿给天奇当挂坠</h3>
             <img src="image/ppt/38.png" tppabs="image/ppt/38.png"/>
         </div>
         <div id="/section-7/page-2" class="ft-page page-40" data-id="page-2">
-            <h3 id="text-45" contenteditable="true">面具不错，勉强配得上我女朋友吧</h3>
-            <img src="image/ppt/39.png" tppabs="image/ppt/39.png" width="750px" height="1000px"/>
+            <h3 id="text-45" contenteditable="true">飞鸿同样觉得面具不错，勉强配得上天奇吧</h3>
+            <img src="image/ppt/39.png" tppabs="image/ppt/39.png" width="20%" height="60%"/>
         </div>
         <div id="/section-7/page-3" class="ft-page page-41" data-id="page-3">
-            <img src="image/ppt/40.png" tppabs="image/ppt/40.png" width="600px" height="1000px"/>
-            <h3 id="text-46" contenteditable="true">终于看到头牌了，这个贴在女朋友电脑上应该跟苹果logo很搭</h3>
+            <img src="image/ppt/40.png" tppabs="image/ppt/40.png" width="20%" height="60%"/>
+            <h3 id="text-46" contenteditable="true">终于看到头牌了，他认为这个贴在天奇电脑上应该跟苹果logo很搭</h3>
         </div>
         <div id="/section-7/page-4" class="ft-page page-42" data-id="page-4">
-            <h3><span id="text-47" contenteditable="true">在成都的这几日，我发现了她几个隐藏的技能</span><br/><span id="text-48"
+            <h3><span id="text-47" contenteditable="true">在成都的这几日，他发现了她几个隐藏的技能</span><br/><span id="text-48"
                                                                                                 contenteditable="true">饭量，胆量，当然还有。。额。酒量</span>
             </h3>
             <img src="image/ppt/iali69.jpg" tppabs="image/ppt/iali69.jpg"/>
         </div>
         <div id="/section-7/page-5" class="ft-page page-43" data-id="page-5">
             <img src="image/ppt/iali42.jpg" tppabs="image/ppt/iali42.jpg"/>
-            <h3 id="text-49" contenteditable="true">看到你对美食的渴望，我意识到学习厨艺是至关重要的</h3>
+            <h3 id="text-49" contenteditable="true">看到她对美食的渴望，飞鸿意识到学习厨艺是至关重要的</h3>
         </div>
         <div id="/section-7/page-6" class="ft-page page-44 left-img" data-id="page-6">
             <h3><span id="text-50" contenteditable="true">爱她</span><br/><span id="text-51" contenteditable="true">就先从做饭开始</span>
@@ -222,22 +220,22 @@
     </div>
     <div class="ft-section section-8" data-id="section-8">
         <div id="/section-8/page-1" class="ft-page page-46" data-id="page-1">
-            <img src="image/ppt/45.png" tppabs="image/ppt/45.png" width="600px" height="1000px"/>
+            <img src="image/ppt/45.png" tppabs="image/ppt/45.png" width="20%" height="80%"/>
             <h3>
-                <span id="text-54" contenteditable="true">为了能够找到真正热爱的职业</span>
-                <span id="text-55" contenteditable="true">我决定到广西进行试炼</span>
-                <span id="text-56" contenteditable="true">她很支持我的选择</span>
-                <span id="text-57" contenteditable="true">于是我们开始了异地恋</span>
+                <span id="text-54" contenteditable="true">为了能够职业转型</span>
+                <span id="text-55" contenteditable="true">他决定到广西进行试炼</span>
+                <span id="text-56" contenteditable="true">天奇很支持他的选择</span>
+                <span id="text-57" contenteditable="true">于是他们开始了异地恋</span>
             </h3>
         </div>
         <div id="/section-8/page-2" class="ft-page page-47 top-text" data-id="page-2">
-            <img src="image/ppt/46.png" tppabs="image/ppt/46.png" width="900px" height="1000px"/>
+            <img src="image/ppt/46.png" tppabs="image/ppt/46.png" width="40%" height="80%"/>
             <h3>
-                <span id="text-58" contenteditable="true">企业转事业的过程还算顺利</span>
-                <span id="text-59" contenteditable="true">只是在这里，我看不到996</span>
+                <span id="text-58" contenteditable="true">职业转型还算顺利</span>
+                <span id="text-59" contenteditable="true">只是在这里</span>
                 <span id="text-59" contenteditable="true">听不到城市的喧嚣</span>
-                <span id="text-60" contenteditable="true">体会不到职场的内卷</span>
-                <span id="text-61" contenteditable="true">仿佛体会到了刘禹锡的“陋室铭”</span></h3>
+                <span id="text-60" contenteditable="true">看不到职场的内卷</span>
+                <span id="text-61" contenteditable="true">只体会到了“陋室铭”</span></h3>
 
         </div>
         <div id="/section-8/page-3" class="ft-page page-48 left-img" data-id="page-3">
@@ -255,37 +253,37 @@
         </div>
         <div id="/section-8/page-5" class="ft-page page-50" data-id="page-5">
             <p class='text' id="text-66" contenteditable="true">没有一线城市的繁华，总害怕她在这里会不开心</p>
-            <img src="image/ppt/49.png" tppabs="image/ppt/49.png" width="800px" height="1000px"/>
+            <img src="image/ppt/49.png" tppabs="image/ppt/49.png" width="40%" height="80%"/>
         </div>
         <div id="/section-8/page-6" class="ft-page page-51" data-id="page-6">
             <p>
-                <span id="text-67" contenteditable="true">来到了宜州，当然要看看我的学校啦</span><br/>
+                <span id="text-67" contenteditable="true">来到了宜州，当然要看看学校啦</span><br/>
                 <span id="text-68" contenteditable="true">河池学院，又称"中国见桥大学"</span><br/>
                 <span id="text-69" contenteditable="true">你看这个龙江</span><br/>
                 <span id="text-70" contenteditable="true">它又宽又长</span>
             </p>
-            <img src="image/ppt/50.png" tppabs="image/ppt/50.png" width="800px" height="1000px"/>
+            <img src="image/ppt/50.png" tppabs="image/ppt/50.png" width="30%" height="70%"/>
         </div>
     </div>
     <div class="ft-section section-9" data-id="section-9">
         <div id="/section-9/page-1" class="ft-page page-52" data-id="page-1">
-            <h3 id="text-71" contenteditable="true">与你携手奔赴刘三姐故居</h3>
+            <h3 id="text-71" contenteditable="true">两人携手奔赴刘三姐故居</h3>
             <img src="image/ppt/51.png" tppabs="image/ppt/51.png" width="1000px" height="700px"/>
         </div>
         <div id="/section-9/page-2" class="ft-page page-53" data-id="page-2">
-            <img src="image/ppt/52.png" tppabs="image/ppt/52.png" width="1000px" height="900px"/>
-            <h3 id="text-72" contenteditable="true">第一次与你共度中秋</h3>
+            <img src="image/ppt/52.png" tppabs="image/ppt/52.png" width="30%" height="60%"/>
+            <h3 id="text-72" contenteditable="true">第一次与天奇共度中秋</h3>
         </div>
         <div id="/section-9/page-3" class="ft-page page-54 center-img" data-id="page-3">
             <p class="text">
-                <span id="text-72" contenteditable="true">你回去后的一周，我也走你走过的路</span><br/>
+                <span id="text-72" contenteditable="true">天奇回去后的一周，他也走了她走过的路</span><br/>
             </p>
             <img src="image/ppt/53.png" tppabs="image/ppt/53.png" width="1000px" height="800px"/>
         </div>
         <div id="/section-9/page-4" class="ft-page page-55 right-img" data-id="page-4">
             <img src="image/ppt/54.png" tppabs="image/ppt/54.png"/>
             <p class="text">
-                <span id="text-73" contenteditable="true">我相信，和你的故事会一直继续下去。</span><br/>
+                <span id="text-73" contenteditable="true">他们的故事会一直继续下去。</span><br/>
                 <span id="text-74" contenteditable="true">收回时间线，我想大声说出来:</span><br/>
                 <span id="text-74" contenteditable="true">天奇，我爱你!</span><br/>
                 <br/>
