--- a/src/main/webapp/WEB-INF/pages/tieitem.html
+++ b/src/main/webapp/WEB-INF/pages/tieitem.html
@@ -33,9 +33,9 @@
                 <div class="comment-box  clearfix">
                     <img src="/image/social/s1.jpg" alt="" class="myhead">
                     <div class="comment-content">
-                        <p class="comment-text"><span class="user">我：</span>写的太好了。</p>
+                        <p class="comment-text"><span class="user">飞鸿：</span>气到想出家。</p>
                         <p class="comment-time">
-                            2016-12-19 14:36
+                            2021-12-14 12:02
                             <a href="javascript:;" class="comment-praise" total="0" my="0"
                                style="display: inline-block">赞</a>
                             <a href="javascript:;" class="comment-operate">回复</a>
@@ -53,14 +53,14 @@
 
     <div class="box clearfix">
         <a href="javascript:;" class="close">×</a><!--关闭按钮-->
-        <img src="image/social/s2.jpg" alt="" class="head"/><!-- 头像 -->
+        <img src="image/social/s1.jpg" alt="" class="head"/><!-- 头像 -->
         <div class="content">
             <div class="main">
                 <p class="text">
-                    <span class="user">人在旅途：</span>
-                    三亚的海滩很漂亮。
+                    <span class="user">飞鸿：</span>
+                    红烧球大爷怎么做，在线等。
                 </p><!-- 文字 -->
-                <img src="image/social/img5.jpg" alt="" class="pic"><!-- 图片 -->
+                <img src="image/social/tie1(4).jpg" alt="" class="pic"><!-- 图片 -->
             </div><!-- 发布内容 -->
             <div class="info clearfix">
                 <span class="time">12-14 13:01</span>
@@ -72,9 +72,75 @@
                 <div class="comment-box clearfix" user="other">
                     <img class="myhead" src="image/social/s4.jpg" alt=""/>
                     <div class="comment-content">
-                        <p class="comment-text"><span class="user">老鹰：</span>我也想去三亚。</p>
+                        <p class="comment-text"><span class="user">老鹰：</span>红烧？清炖？酱醋？。</p>
                         <p class="comment-time">
-                            2014-02-19 14:36
+                            2021-12-14 13:12
+                            <a href="javascript:;" class="comment-praise" total="0" my="0">赞</a>
+                            <a href="javascript:;" class="comment-operate">回复</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-box clearfix" user="other">
+                    <img class="myhead" src="image/social/s3.jpg" alt=""/>
+                    <div class="comment-content">
+                        <p class="comment-text"><span class="user">娜娜：</span>太残忍了吧。。。酱卤！！</p>
+                        <p class="comment-time">
+                            2021-12-14 13:18
+                            <a href="javascript:;" class="comment-praise" total="0" my="0">赞</a>
+                            <a href="javascript:;" class="comment-operate">回复</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-box clearfix" user="other">
+                    <img class="myhead" src="image/social/s2.jpg" alt=""/>
+                    <div class="comment-content">
+                        <p class="comment-text"><span class="user">小勇：</span>猫肉不能吃，是酸的。而且这是宠物，也不能吃啊~</p>
+                        <p class="comment-time">
+                            2021-12-14 13:21
+                            <a href="javascript:;" class="comment-praise" total="0" my="0">赞</a>
+                            <a href="javascript:;" class="comment-operate">回复</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-box clearfix" user="other">
+                    <img class="myhead" src="image/social/s1.jpg" alt=""/>
+                    <div class="comment-content">
+                        <p class="comment-text"><span class="user">飞鸿：</span>@小勇 你看不出来这是玩笑嘛~</p>
+                        <p class="comment-time">
+                            2021-12-14 13:30
+                            <a href="javascript:;" class="comment-praise" total="0" my="0">赞</a>
+                            <a href="javascript:;" class="comment-operate">回复</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-box clearfix" user="other">
+                    <img class="myhead" src="image/social/s3.jpg" alt=""/>
+                    <div class="comment-content">
+                        <p class="comment-text"><span class="user">娜娜：</span>@飞鸿 这孩子太实诚了哈哈哈哈！</p>
+                        <p class="comment-time">
+                            2021-12-14 13:31
+                            <a href="javascript:;" class="comment-praise" total="0" my="0">赞</a>
+                            <a href="javascript:;" class="comment-operate">回复</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-box clearfix" user="other">
+                    <img class="myhead" src="image/social/s4.jpg" alt=""/>
+                    <div class="comment-content">
+                        <p class="comment-text"><span class="user">小鹰：</span>@小勇 多多少少有点傻</p>
+                        <p class="comment-time">
+                            2021-12-14 13:32
+                            <a href="javascript:;" class="comment-praise" total="0" my="0">赞</a>
+                            <a href="javascript:;" class="comment-operate">回复</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-box clearfix" user="other">
+                    <img class="myhead" src="image/social/s2.jpg" alt=""/>
+                    <div class="comment-content">
+                        <p class="comment-text"><span class="user">小勇：</span>@小鹰 朝你大跨捏一把</p>
+                        <p class="comment-time">
+                            2021-12-14 13:33
                             <a href="javascript:;" class="comment-praise" total="0" my="0">赞</a>
                             <a href="javascript:;" class="comment-operate">回复</a>
                         </p>
@@ -89,31 +155,7 @@
         </div><!-- 正文内容 -->
     </div><!-- 第二个box结束 -->
 
-    <div class="box clearfix">
-        <a class="close" href="javascript:;">×</a>
-        <img class="head" src="image/social/s3.jpg" alt=""/>
-        <div class="content">
-            <div class="main">
-                <p class="txt">
-                    <span class="user">小Y：</span>英国艺术家 Jane Perkins
-                    能利用很多不起眼的东西进行创作，甚至是垃圾。首饰、纽扣、玩具等等都可以作为他创作的工具并创作出惟妙惟肖的画作，丝毫不逊色于色彩丰富的颜料。
-                </p>
-            </div>
-            <div class="info clearfix">
-                <span class="time">12-19 13:17</span>
-                <a class="praise" href="javascript:;">赞</a>
-            </div>
-            <div class="praises-total" total="0" style="display: none;"></div>
-            <div class="comment-list">
 
-            </div>
-            <div class="text-box">
-                <textarea class="comment" autocomplete="off">评论......</textarea>
-                <button class="btn ">回 复</button>
-                <span class="word"><span class="length">0</span>/140</span>
-            </div>
-        </div>
-    </div><!-- 第三个box结束 -->
 </div><!-- 社交评论列表 -->
 
 </body>
