--- a/src/main/webapp/WEB-INF/pages/tieitem4.html
+++ b/src/main/webapp/WEB-INF/pages/tieitem4.html
@@ -23,7 +23,7 @@
                 <img src="image/social/tie4(3).jpg" alt="" class="pic"><!-- 图片 -->
             </div><!-- 发布内容 -->
             <div class="info clearfix">
-                <span class="time">12-14 12:01</span>
+                <span class="time">10-10 08:32</span>
                 <a class="praise" href="javascript:;">赞</a>
             </div><!-- 内容相关信息 -->
             <div class="praises-total" total="4">
@@ -33,9 +33,9 @@
                 <div class="comment-box  clearfix">
                     <img src="/image/social/s1.jpg" alt="" class="myhead">
                     <div class="comment-content">
-                        <p class="comment-text"><span class="user">我：</span>瞪谁谁怀孕。</p>
+                        <p class="comment-text"><span class="user">飞鸿：</span>瞪谁谁怀孕。</p>
                         <p class="comment-time">
-                            2016-12-19 14:36
+                            2021-10-10 08:33
                             <a href="javascript:;" class="comment-praise" total="0" my="0"
                                style="display: inline-block">赞</a>
                             <a href="javascript:;" class="comment-operate">回复</a>
@@ -63,7 +63,7 @@
                 <img src="image/social/img5.jpg" alt="" class="pic"><!-- 图片 -->
             </div><!-- 发布内容 -->
             <div class="info clearfix">
-                <span class="time">12-14 13:01</span>
+                <span class="time">10-10 08:40</span>
                 <a class="praise" href="javascript:;">赞</a>
             </div><!-- 内容相关信息 -->
             <div class="praises-total" total="0" style="display: none;">
@@ -74,7 +74,7 @@
                     <div class="comment-content">
                         <p class="comment-text"><span class="user">老鹰：</span>师兄，我可能晚点。。。</p>
                         <p class="comment-time">
-                            2014-02-19 14:36
+                            2021-10-10 08:41
                             <a href="javascript:;" class="comment-praise" total="0" my="0">赞</a>
                             <a href="javascript:;" class="comment-operate">回复</a>
                         </p>
@@ -99,7 +99,7 @@
                 </p>
             </div>
             <div class="info clearfix">
-                <span class="time">12-19 13:17</span>
+                <span class="time">10-10 10:17</span>
                 <a class="praise" href="javascript:;">赞</a>
             </div>
             <div class="praises-total" total="0" style="display: none;"></div>
