--- a/src/main/webapp/WEB-INF/pages/fire.html
+++ b/src/main/webapp/WEB-INF/pages/fire.html
@@ -14,7 +14,7 @@
         <div class="text_wrapper">
             <img src="/image/a8.png" alt="">
             <div class="text">
-                你愿意做我女朋友吗？
+                天奇，你愿意做我女朋友吗？
             </div>
         </div>
     </div>
@@ -35,10 +35,10 @@
 <img src="/image/moon.png" alt="" id="moon" style="visibility: hidden;"/>
 <div style="display:none">
     <div class="shape">
-        爱你3000次
+        天奇
     </div>
     <div class="shape">
-        天奇
+        爱你3000次
     </div>
     <div class="shape">
         但为明烛
@@ -46,8 +46,15 @@
     <div class="shape">
         为汝之光
     </div>
+    <div class="shape">
+        长相思守
+    </div>
 </div>
-<iframe id="iframMusic" allow="autoplay" style="display:none" src="/sound/blank.mp3"></iframe>
+<!--音乐部分-->
+<audio autoplay loop id="music">
+    <source src="/sound/blank.mp3" />
+</audio>
+<iframe id="iframMusic" allow="autoplay" style="display:none" src="/sound/firemain.mp3"></iframe>
 <script src="/js/jquery.min.js"></script>
 <script src="/js/fire.js"></script>
 <script src="/js/talk.js"></script>
