--- a/src/main/webapp/WEB-INF/pages/openingtitle.html
+++ b/src/main/webapp/WEB-INF/pages/openingtitle.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="GBK">
     <title>开场动画</title>
@@ -12,7 +12,9 @@
 
         html, body {
             width: 100%;
+            min-width: 100%;
             height: 100%;
+            min-height: 100%;
             overflow: hidden;
         }
 
