--- a/src/main/webapp/WEB-INF/pages/tieitem2.html
+++ b/src/main/webapp/WEB-INF/pages/tieitem2.html
@@ -19,11 +19,11 @@
                     我很大，你要忍一下！
                 </p><!-- 文字 -->
                 <img src="image/social/tie2(1).jpg" alt="" class="pic"><!-- 图片 -->
-<!--                <img src="image/social/tie1(2).jpg" alt="" class="pic">&lt;!&ndash; 图片 &ndash;&gt;-->
-<!--                <img src="image/social/tie1(3).jpg" alt="" class="pic">&lt;!&ndash; 图片 &ndash;&gt;-->
+                <!--                <img src="image/social/tie1(2).jpg" alt="" class="pic">&lt;!&ndash; 图片 &ndash;&gt;-->
+                <!--                <img src="image/social/tie1(3).jpg" alt="" class="pic">&lt;!&ndash; 图片 &ndash;&gt;-->
             </div><!-- 发布内容 -->
             <div class="info clearfix">
-                <span class="time">12-14 12:01</span>
+                <span class="time">11-23 12:01</span>
                 <a class="praise" href="javascript:;">赞</a>
             </div><!-- 内容相关信息 -->
             <div class="praises-total" total="4">
@@ -35,7 +35,7 @@
                     <div class="comment-content">
                         <p class="comment-text"><span class="user">小勇：</span>。。。</p>
                         <p class="comment-time">
-                            2016-12-19 14:36
+                            2021-11-23 12:02
                             <a href="javascript:;" class="comment-praise" total="0" my="0"
                                style="display: inline-block">赞</a>
                             <a href="javascript:;" class="comment-operate">回复</a>
@@ -45,7 +45,7 @@
                     <div class="comment-content">
                         <p class="comment-text"><span class="user">娜娜：</span>。。。</p>
                         <p class="comment-time">
-                            2016-12-19 14:36
+                            2021-11-23 12:03
                             <a href="javascript:;" class="comment-praise" total="0" my="0"
                                style="display: inline-block">赞</a>
                             <a href="javascript:;" class="comment-operate">回复</a>
@@ -53,9 +53,9 @@
                     </div>
                     <img src="/image/social/s4.jpg" alt="" class="myhead">
                     <div class="comment-content">
-                        <p class="comment-text"><span class="user">小鹰：</span>。。。</p>
+                        <p class="comment-text"><span class="user">小鹰：</span>这。。。我要举报！！！</p>
                         <p class="comment-time">
-                            2016-12-19 14:36
+                            2021-11-23 12:05
                             <a href="javascript:;" class="comment-praise" total="0" my="0"
                                style="display: inline-block">赞</a>
                             <a href="javascript:;" class="comment-operate">回复</a>
@@ -75,28 +75,61 @@
 
     <div class="box clearfix">
         <a href="javascript:;" class="close">×</a><!--关闭按钮-->
-        <img src="image/social/s2.jpg" alt="" class="head"/><!-- 头像 -->
+        <img src="image/social/s5.jpg" alt="" class="head"/><!-- 头像 -->
         <div class="content">
             <div class="main">
                 <p class="text">
-                    <span class="user">人在旅途：</span>
-                    三亚的海滩很漂亮。
+                    <span class="user">满脸痘：</span>
+                    比我老公的大诶~
                 </p><!-- 文字 -->
-                <img src="image/social/img5.jpg" alt="" class="pic"><!-- 图片 -->
+                <!--                <img src="image/social/img5.jpg" alt="" class="pic">&lt;!&ndash; 图片 &ndash;&gt;-->
             </div><!-- 发布内容 -->
             <div class="info clearfix">
-                <span class="time">12-14 13:01</span>
+                <span class="time">11-23 14:01</span>
                 <a class="praise" href="javascript:;">赞</a>
             </div><!-- 内容相关信息 -->
             <div class="praises-total" total="0" style="display: none;">
             </div><!-- 点赞统计 -->
             <div class="comment-list">
                 <div class="comment-box clearfix" user="other">
+                    <img class="myhead" src="image/social/s1.jpg" alt=""/>
+                    <div class="comment-content">
+                        <p class="comment-text"><span class="user">飞鸿：</span>你真的是诠释了什么叫如坐针毡。。</p>
+                        <p class="comment-time">
+                            2021-11-23 14:36
+                            <a href="javascript:;" class="comment-praise" total="0" my="0">赞</a>
+                            <a href="javascript:;" class="comment-operate">回复</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-box clearfix" user="other">
                     <img class="myhead" src="image/social/s4.jpg" alt=""/>
                     <div class="comment-content">
-                        <p class="comment-text"><span class="user">老鹰：</span>我也想去三亚。</p>
+                        <p class="comment-text"><span class="user">老鹰：</span>我靠。你牛逼！！</p>
                         <p class="comment-time">
-                            2014-02-19 14:36
+                            2021-11-23 14:40
+                            <a href="javascript:;" class="comment-praise" total="0" my="0">赞</a>
+                            <a href="javascript:;" class="comment-operate">回复</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-box clearfix" user="other">
+                    <img class="myhead" src="image/social/s2.jpg" alt=""/>
+                    <div class="comment-content">
+                        <p class="comment-text"><span class="user">小勇：</span>扎你老公心啦啊~~~</p>
+                        <p class="comment-time">
+                            2021-11-23 14:42
+                            <a href="javascript:;" class="comment-praise" total="0" my="0">赞</a>
+                            <a href="javascript:;" class="comment-operate">回复</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-box clearfix" user="other">
+                    <img class="myhead" src="image/social/s3.jpg" alt=""/>
+                    <div class="comment-content">
+                        <p class="comment-text"><span class="user">娜娜：</span>一时不知道该同情谁。。。</p>
+                        <p class="comment-time">
+                            2021-11-23 14:45
                             <a href="javascript:;" class="comment-praise" total="0" my="0">赞</a>
                             <a href="javascript:;" class="comment-operate">回复</a>
                         </p>
@@ -117,12 +150,13 @@
         <div class="content">
             <div class="main">
                 <p class="txt">
-                    <span class="user">小Y：</span>英国艺术家 Jane Perkins
-                    能利用很多不起眼的东西进行创作，甚至是垃圾。首饰、纽扣、玩具等等都可以作为他创作的工具并创作出惟妙惟肖的画作，丝毫不逊色于色彩丰富的颜料。
+                    <span class="user">娜娜：</span>我觉得我是因为不够变态而与你们格格不入。
                 </p>
+                <img src="image/social/tie2r.jpg" alt="" class="pic"><!-- 图片 -->
+                <img src="image/social/tie2rr.jpg" alt="" class="pic"><!-- 图片 -->
             </div>
             <div class="info clearfix">
-                <span class="time">12-19 13:17</span>
+                <span class="time">11-24 07:17</span>
                 <a class="praise" href="javascript:;">赞</a>
             </div>
             <div class="praises-total" total="0" style="display: none;"></div>
@@ -133,6 +167,32 @@
                 <textarea class="comment" autocomplete="off">评论......</textarea>
                 <button class="btn ">回 复</button>
                 <span class="word"><span class="length">0</span>/140</span>
+            </div>
+            <div class="comment-list">
+
+                <div class="comment-box clearfix" user="other">
+                    <img class="myhead" src="image/social/s1.jpg" alt=""/>
+                    <div class="comment-content">
+                        <p class="comment-text"><span class="user">飞鸿：</span>淡定淡定，常规操作。</p>
+                        <p class="comment-time">
+                            2021-11-24 08:36
+                            <a href="javascript:;" class="comment-praise" total="0" my="0">赞</a>
+                            <a href="javascript:;" class="comment-operate">回复</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-box clearfix" user="other">
+                    <img class="myhead" src="image/social/s2.jpg" alt=""/>
+                    <div class="comment-content">
+                        <p class="comment-text"><span class="user">小勇：</span>我很纯洁，我的小名儿叫纯净水儿。</p>
+                        <p class="comment-time">
+                            2021-11-24 08:40
+                            <a href="javascript:;" class="comment-praise" total="0" my="0">赞</a>
+                            <a href="javascript:;" class="comment-operate">回复</a>
+                        </p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div><!-- 第三个box结束 -->
