--- a/src/main/webapp/WEB-INF/pages/tieitem3.html
+++ b/src/main/webapp/WEB-INF/pages/tieitem3.html
@@ -16,14 +16,14 @@
             <div class="main">
                 <p class="text">
                     <span class="user">飞鸿：</span>
-                    你们看，这可爱的猫。。。。尼玛！
+                    真就睡癔症了呗，突破智力极限啦！！！！
                 </p><!-- 文字 -->
-                <img src="image/social/tie1(1).jpg" alt="" class="pic"><!-- 图片 -->
-                <img src="image/social/tie1(2).jpg" alt="" class="pic"><!-- 图片 -->
-                <img src="image/social/tie1(3).jpg" alt="" class="pic"><!-- 图片 -->
+                <img src="image/social/tie3(1).jpg" alt="" class="pic"><!-- 图片 -->
+                <img src="image/social/tie3(2).jpg" alt="" class="pic"><!-- 图片 -->
+                <img src="image/social/tie3(3).jpg" alt="" class="pic"><!-- 图片 -->
             </div><!-- 发布内容 -->
             <div class="info clearfix">
-                <span class="time">12-14 12:01</span>
+                <span class="time">10-30 14:11</span>
                 <a class="praise" href="javascript:;">赞</a>
             </div><!-- 内容相关信息 -->
             <div class="praises-total" total="4">
@@ -33,9 +33,33 @@
                 <div class="comment-box  clearfix">
                     <img src="/image/social/s1.jpg" alt="" class="myhead">
                     <div class="comment-content">
-                        <p class="comment-text"><span class="user">我：</span>写的太好了。</p>
+                        <p class="comment-text"><span class="user">飞鸿：</span>好好的一个午觉，让它睡出了早生极乐的感觉。。。</p>
                         <p class="comment-time">
-                            2016-12-19 14:36
+                            2021-10-30 14:13
+                            <a href="javascript:;" class="comment-praise" total="0" my="0"
+                               style="display: inline-block">赞</a>
+                            <a href="javascript:;" class="comment-operate">回复</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-box  clearfix">
+                    <img src="/image/social/s2.jpg" alt="" class="myhead">
+                    <div class="comment-content">
+                        <p class="comment-text"><span class="user">小勇：</span>这肚子。。比我混得好啊</p>
+                        <p class="comment-time">
+                            2021-10-30 14:20
+                            <a href="javascript:;" class="comment-praise" total="0" my="0"
+                               style="display: inline-block">赞</a>
+                            <a href="javascript:;" class="comment-operate">回复</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-box  clearfix">
+                    <img src="/image/social/s4.jpg" alt="" class="myhead">
+                    <div class="comment-content">
+                        <p class="comment-text"><span class="user">小鹰：</span>这睡姿，是真的把这里当家了啊</p>
+                        <p class="comment-time">
+                            2021-10-30 14:25
                             <a href="javascript:;" class="comment-praise" total="0" my="0"
                                style="display: inline-block">赞</a>
                             <a href="javascript:;" class="comment-operate">回复</a>
@@ -53,28 +77,39 @@
 
     <div class="box clearfix">
         <a href="javascript:;" class="close">×</a><!--关闭按钮-->
-        <img src="image/social/s2.jpg" alt="" class="head"/><!-- 头像 -->
+        <img src="image/social/s4.jpg" alt="" class="head"/><!-- 头像 -->
         <div class="content">
             <div class="main">
                 <p class="text">
-                    <span class="user">人在旅途：</span>
-                    三亚的海滩很漂亮。
+                    <span class="user">小鹰：</span>
+                    看我家这个
                 </p><!-- 文字 -->
-                <img src="image/social/img5.jpg" alt="" class="pic"><!-- 图片 -->
+                <img src="image/social/tie4r.jpg" alt="" class="pic"><!-- 图片 -->
             </div><!-- 发布内容 -->
             <div class="info clearfix">
-                <span class="time">12-14 13:01</span>
+                <span class="time">10-30 18:56</span>
                 <a class="praise" href="javascript:;">赞</a>
             </div><!-- 内容相关信息 -->
             <div class="praises-total" total="0" style="display: none;">
             </div><!-- 点赞统计 -->
             <div class="comment-list">
                 <div class="comment-box clearfix" user="other">
-                    <img class="myhead" src="image/social/s4.jpg" alt=""/>
+                    <img class="myhead" src="image/social/s2.jpg" alt=""/>
                     <div class="comment-content">
-                        <p class="comment-text"><span class="user">老鹰：</span>我也想去三亚。</p>
+                        <p class="comment-text"><span class="user">小勇：</span>你这绝对正处级干部。</p>
                         <p class="comment-time">
-                            2014-02-19 14:36
+                            2021-10-30 19:45
+                            <a href="javascript:;" class="comment-praise" total="0" my="0">赞</a>
+                            <a href="javascript:;" class="comment-operate">回复</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="comment-box clearfix" user="other">
+                    <img class="myhead" src="image/social/s3.jpg" alt=""/>
+                    <div class="comment-content">
+                        <p class="comment-text"><span class="user">娜娜：</span>最起码副厅级！</p>
+                        <p class="comment-time">
+                            2021-10-30 20:15
                             <a href="javascript:;" class="comment-praise" total="0" my="0">赞</a>
                             <a href="javascript:;" class="comment-operate">回复</a>
                         </p>
@@ -89,31 +124,6 @@
         </div><!-- 正文内容 -->
     </div><!-- 第二个box结束 -->
 
-    <div class="box clearfix">
-        <a class="close" href="javascript:;">×</a>
-        <img class="head" src="image/social/s3.jpg" alt=""/>
-        <div class="content">
-            <div class="main">
-                <p class="txt">
-                    <span class="user">小Y：</span>英国艺术家 Jane Perkins
-                    能利用很多不起眼的东西进行创作，甚至是垃圾。首饰、纽扣、玩具等等都可以作为他创作的工具并创作出惟妙惟肖的画作，丝毫不逊色于色彩丰富的颜料。
-                </p>
-            </div>
-            <div class="info clearfix">
-                <span class="time">12-19 13:17</span>
-                <a class="praise" href="javascript:;">赞</a>
-            </div>
-            <div class="praises-total" total="0" style="display: none;"></div>
-            <div class="comment-list">
-
-            </div>
-            <div class="text-box">
-                <textarea class="comment" autocomplete="off">评论......</textarea>
-                <button class="btn ">回 复</button>
-                <span class="word"><span class="length">0</span>/140</span>
-            </div>
-        </div>
-    </div><!-- 第三个box结束 -->
 </div><!-- 社交评论列表 -->
 
 </body>
